# Checkers

./: README.md
include/: AI.hpp  Board.hpp  Game.hpp  Move.hpp  Piece.hpp  Tile.hpp
reports/: desktop.ini
src/: Board.cpp  Game.cpp  Measure.cpp  Move.cpp  Piece.cpp  Tile.cpp  wyniki_wydajnosci.txt
viz/: CMakeLists.txt  viz.cpp
